...
          children: <Widget>[
            const SizedBox(height: 10),
            Row(
              children: [
                Expanded(
                  child: TextFormField(
                    key: const Key('firstName'),
                    decoration: InputDecoration(
                      labelText: _localizations!.firstName,
                    ),
                    controller: _firstNameController,
                    validator: (value) {
                      if (value!.isEmpty) {
...
                    },
                  ),
                ),
                const SizedBox(width: 10),
                Expanded(
                  child: TextFormField(
                    key: const Key('lastName'),
                    decoration: InputDecoration(
                      labelText: _localizations!.lastName,
                    ),
                    controller: _lastNameController,
                    validator: (value) {
                      if (value!.isEmpty) return _localizations!.lastNameError;
...
              _localizations!.tempPassword,
              textAlign: TextAlign.center,
              style: const TextStyle(color: Colors.orange),
            ),
            const SizedBox(height: 10),
            TextFormField(
              key: const Key('email'),
              decoration: InputDecoration(
                labelText: _localizations!.emailAddress,
              ),
              controller: _emailController,
              validator: (String? value) {
                if (value!.isEmpty) return _localizations!.emailAddressError;
...
                return null;
              },
            ),
            const SizedBox(height: 20),
            const SizedBox(height: 10),
            OutlinedButton(
              key: const Key('newUserButton'),
              child: Text(_localizations!.register),
              onPressed: () async {
                if (_registerFormKey.currentState!.validate()) {
                  _authBloc.add(
                    AuthRegister(
                      User(
...
