...
                      OutlinedButton(
                        key: const Key('resetPasswordOk'),
                        child: Text(_localizations!.ok),
                        onPressed: () {
                          _authBloc.add(
                            AuthResetPassword(
                              username: _usernameController.text,
                            ),
                          );
                        },
                      ),
                    ],
                  ),
...
